--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+body {
+    background-color: #ebe4f5;
+    width: 100vw;
+    overflow-x: hidden;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .animatedButton{
+    animation-duration: 10000ms;
+  }
+  .ql-container{
+    border: none !important;
+  }
+  .ql-toolbar{
+    border: none !important;
+  }
+  .ql-editor{
+    border: none !important;
+  }
